smaller navbar only applies to the non-collapsed navbar, navbar is no longer fixed to the top of the page

--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,18 +1,20 @@
-.navbar-xs {
-    min-height : 40px;
-    height     : 40px;
-}
+@media (min-width : 768px) {
+    .navbar-xs {
+        min-height : 40px;
+        height     : 40px;
+    }
 
-.navbar-xs .navbar-brand {
-    padding     : 6px 18px;
-    font-size   : 20px;
-    line-height : 40px;
-}
+    .navbar-xs .navbar-brand {
+        padding     : 6px 18px;
+        font-size   : 20px;
+        line-height : 40px;
+    }
 
-.navbar-xs .navbar-nav > li > a {
-    padding-top    : 0;
-    padding-bottom : 0;
-    line-height    : 40px;
+    .navbar-xs .navbar-nav > li > a {
+        padding-top    : 0;
+        padding-bottom : 0;
+        line-height    : 40px;
+    }
 }
 
 li.break:after {
